# solcrush

./: .gitignore  Anchor.toml  Cargo.toml  PUSH_TO_GITHUB.bat  README.md  program-keypair.json  vercel.json
frontend/: next.config.js  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: SolCrush.tsx
frontend/src/lib/: idl.json  solcrushChain.ts
frontend/src/providers/: WalletProvider.tsx
program/: Cargo.toml
program/src/: errors.rs  lib.rs  state.rs
program/src/instructions/: cancel_match.rs  deposit_stake.rs  initialize_match.rs  mod.rs  resolve_match.rs
scripts/: deploy.sh  package.json  setup-devnet-usdc.ts  test-staking.ts
server/: index.js  package.json
