[package]
name = "solcrush-staking"
version = "0.1.0"
description = "SolCrush On-Chain Staking — SOL & USDC PvP Escrow"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "solcrush_staking"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
anchor-spl = { version = "0.29.0", features = ["associated-token"] }
hex = "0.4"
